force-app/main/default/objects/Template_Product_Eligibility__c/Template_Product_Eligibility__c.object-meta.xml
<CustomObject>
    <description>Defines product-level eligibility rules for incentive plan templates, specifying which products or product families qualify under each template.</description>
    <label>Template Product Eligibility</label>
    <nameField>
        <displayFormat>TPE-{00000}</displayFormat>
        <label>Template Product Eligibility Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Product Eligibilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>