force-app/main/default/objects/Template_Product_Eligibility__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <description>Indicates whether this product must be present on the deal.</description>
    <label>Is Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>