force-app/main/default/objects/Template_Product_Eligibility__c/fields/Match_Mode__c.field-meta.xml
<CustomField>
    <fullName>Match_Mode__c</fullName>
    <description>How this product eligibility rule is applied.</description>
    <label>Match Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Exclude</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>