force-app/main/default/objects/Template_Product_Eligibility__c/fields/Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Plan_Template__c</fullName>
    <description>The incentive plan template for this product eligibility.</description>
    <label>Plan Template</label>
    <type>MasterDetail</type>
    <referenceTo>Incentive_Plan_Template__c</referenceTo>
    <relationshipLabel>Product Eligibilities</relationshipLabel>
    <relationshipName>Product_Eligibilities</relationshipName>
</CustomField>