force-app/main/default/objects/Template_Product_Eligibility__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>The product eligible for this plan template.</description>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Template Product Eligibilities</relationshipLabel>
    <relationshipName>Template_Product_Eligibilities</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>