force-app/main/default/objects/Template_Product_Eligibility__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Product family for broader eligibility matching.</description>
    <label>Product Family</label>
    <type>Text</type>
    <length>100</length>
</CustomField>